fix: adjust input background color in register component and comment out overflow in styles

--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -6,3 +6,7 @@
         background-color: #444DF2;
     }
 }
+
+input {
+    background-color: #edeefe;
+}
