--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,7 @@
 html,
 body {
   height: 100%;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 body {
